# montgomery-guardian

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEMO_SCRIPT.md  FINAL_FIXES_SUMMARY.md  FINAL_REFORGING_COMPLETE.md  Montgomery_Guardian_PRD_v2.md  README.md  create_demo_models.py  create_demo_models_fixed.py  demo_api.py  docker-compose.yml  final_audit.py  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  setup_demo_data.py  test_ai_agents_wiring.sh  test_backend_endpoints.sh  test_blocks_1_2_completion.sh  test_final_reforging_fixed.sh  test_frontend_reality_check.sh  train_demo_models.py  tsconfig.tsbuildinfo  verify_security_fixes.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  check_redis.py  init_db.sql  montgomery-etl-old.service  montgomery-etl.service  pyproject.toml  requirements.txt  test_pipeline.py
backend/api/: main.py  websocket_manager.py  websocket_manager_old.py
backend/api/core/: config.py  database.py  redis.py
backend/api/models/: crime.py  requests.py  schemas.py
backend/api/routers/: alerts.py  chat.py  crime.py  districts.py  kpis.py  predictions.py  (+2 more)
backend/etl/: arcgis_client.py  chroma_setup.py  crime_etl.py  requests_311_etl.py  run_scheduler.py  scheduler.py
backend/montgomery_guardian_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/scraper/: alert_extractor.py  bright_data_client.py  bright_data_mcp.py  news_scraper.py
backend/tests/: test_api.py  test_security_hardening.py  test_ws_heartbeat.py  verify_fixes.py  verify_fixes_v2.py  verify_foundation.py
(+114 files in other folders)
