[project]
name = "montgomery-guardian-api"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "geopandas>=0.14.0",
  "redis>=5.0.0",
  "psycopg2-binary>=2.9.9",
  "sqlalchemy>=2.0.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.0",
  "requests>=2.32.0",
  "schedule>=1.2.2",
  "chromadb>=0.4.24",
  "pillow>=9.0.0",
  "geoalchemy2>=0.14.0",
  "sentence-transformers>=3.0.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "etl*", "scraper*", "realtime*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
